--- a/Roomie/Roomie/Settings.storyboard
+++ b/Roomie/Roomie/Settings.storyboard
@@ -50,6 +50,9 @@
                                                 <integer key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <segue destination="sQG-cF-q78" kind="show" id="eiD-dJ-bA1"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O0C-we-b8U">
                                         <rect key="frame" x="0.0" y="90" width="175" height="30"/>
@@ -213,6 +216,49 @@
             </objects>
             <point key="canvasLocation" x="1672.8" y="-167.76611694152925"/>
         </scene>
+        <!--Contact Us-->
+        <scene sceneID="e78-bX-OmD">
+            <objects>
+                <viewController id="sQG-cF-q78" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MLb-EI-iqb"/>
+                        <viewControllerLayoutGuide type="bottom" id="kKz-Qx-bsn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d9O-cG-laP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uPf-t6-8wg">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PPw-AA-0ZD">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PPw-AA-0ZD" id="LcT-pS-Wl2">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uPf-t6-8wg" firstAttribute="top" secondItem="MLb-EI-iqb" secondAttribute="bottom" id="1dt-eN-doU"/>
+                            <constraint firstAttribute="trailing" secondItem="uPf-t6-8wg" secondAttribute="trailing" id="MEr-J2-h4t"/>
+                            <constraint firstItem="uPf-t6-8wg" firstAttribute="leading" secondItem="d9O-cG-laP" secondAttribute="leading" id="o7H-RN-ZeG"/>
+                            <constraint firstItem="kKz-Qx-bsn" firstAttribute="top" secondItem="uPf-t6-8wg" secondAttribute="bottom" id="wmV-xO-Zi0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Contact Us" id="af4-uf-aGL">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="fgb-9Q-Ski"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zVi-fJ-IIm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1667" y="635"/>
+        </scene>
         <!--Edit Profile-->
         <scene sceneID="bMP-ea-lEi">
             <objects>
@@ -331,7 +377,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="beq-c7-oZr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="43x-pZ-BIP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1324" y="609.44527736131943"/>
+            <point key="canvasLocation" x="2410" y="-156"/>
         </scene>
         <!--Settings-->
         <scene sceneID="1Li-dO-joi">
